[package]
name = "gardal"
version = "0.0.1-alpha.3"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Ahmed Farghal <me@asoli.dev>"]
rust-version = "1.87.0"                              # MSRV
repository = "https://github.com/AhmedSoliman/gardal"
categories = ["asynchronous", "concurrency", "network-programming"]
description = "A WIP performance-focused token-bucket rate limiting and throttling library"
readme = "README.md"

[features]
default = []
async = ["tokio/sync", "tokio/time", "pin-project-lite", "futures"]

[dependencies]
quanta = {version = "0.12", optional = true}
likely_stable = { version = "0.1.3" }
tokio = { version = "1", features = ["sync", "time"], optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }
tokio-hrtime = { version = "0.1", optional = true }

[dev-dependencies]
gardal = { path = ".", features = ["async", "tokio", "quanta"] }
criterion = { version = "0.7", default-features = false }
tokio = { version = "1", features = ["sync", "time", "test-util", "macros", "rt", "rt-multi-thread"] }
nonzero_ext = { version = "0.3" }
tokio-stream = { version = "0.1", features = ["time"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "time_ops"
harness = false

[profile.release]
opt-level = 3
lto = "thin"

[profile.bench]
inherits = "release"
debug = true
